--- a/sections/4_results.tex
+++ b/sections/4_results.tex
@@ -96,7 +96,7 @@ The group averaged, aligned TFRs are shown in Figure \ref{fig:TFRGA_ent} for fre
 
 \subsection{\textcolor{red}{Frequency analyses with a longer time window confirm robustness of the reported results}} \textcolor{red}{To assess the robustness of our results, we repeated the frequency analyses in the \RFTonly and \gammaRFT condition with a 2s sliding time window. The longer window substantially increased the signal-to-noise ratio of the flicker response, to up to over 400\% relative power change in the \RFTonly condition and more than 600\% in the \gammaRFT condition (not shown). Besides that, the analyses replicated our reported main finding: a reduction in response magnitude (power) with increasing frequency, in both conditions, following the same trend as depicted in Figure \ref{fig:freq_fun}C and D. The 2 s sliding time-window did however not optimally capture the gamma power, which has a broader peak than the response to the photic drive. The 500 ms sliding window used in our reported analyses is therefore a good compromise, allowing both a reliable identification of a gamma peak frequency and a sufficiently high signal-to-noise ratio and frequency resolution of the flicker response (see Figure \ref{fig:subj_ent}A).}
 
-\subsection{\textcolor{red}{Oscillatory gamma dynamics cannot be captured by frequency entrainment}} \noindent \textcolor{red}{Synchronisation of neuronal oscillations by rhythmic stimulation could be conceptualized as the entrainment of a self-sustained oscillator by an external force \citep[e.g.][]{notbohm2016modification,helfrich2019neural}; resulting in a change in frequency of the ongoing oscillations, so-called 'frequency entrainment'. Visual inspection of the TFRs of power in Figure \ref{fig:subj_ent} and \ref{fig:TFRGA_ent} do no indicate any modulation of the peak frequency of the gamma oscillations by the flicker response, suggesting that they do not synchronize. To quantify these observations, we investigated the power of the gamma oscillations before and during the photic drive (Figure \ref{fig:boxpl_ent}) in the \gammaRFT condition.} A central assumption of oscillatory entrainment is the existence of a 'synchronization region' in the frequency range around the endogenous frequency of the oscillator, the so-called Arnold tongue \citep[e.g.][]{pikovsky2003synchronization}. Driving frequencies falling inside this synchronization region, will be able to modulate the dynamics of the self-sustained oscillator \citep[also see][]{hutt2018effect}. \textcolor{red}{With this in mind, the following analyses only included flicker frequencies in the vicinity of the IGF.} For each participant, we considered the relative power change induced by the moving gratings in the 0.5 - 1.5 s interval (T1) before the flicker onset and in the 2.5 - 3.5 s interval (T2) in which both the moving gratings and the photic drive were present. We investigated this for stimulation frequencies below the IGF (averaged power for -6 and -4 Hz) and above (averaged power for +4 and +6 Hz). Assuming a symmetric Arnold tongue centered at the IGF, as shown for entrainment in the alpha-band \citep{notbohm2016modification}, we expected a reduction in power at the IGF in interval T2 compared to interval T1 for both higher and lower driving frequencies, i.e. an effect of time, but not frequency. Figure \ref{fig:boxpl_ent} depicts power change at the IGF for the factors stimulation frequency (drive$<$IGF and drive$>$IGF) and time interval (T1 and T2), averaged over the SOIs for each subject. In accordance with the TFRs in Figure \ref{fig:TFRGA_ent}, there is no meaningful indication for gamma power being reduced during the T2 interval as compared to the T1 interval, affirming the coexistence of the two responses. \textcolor{red}{A factorial repeated-measures ANOVA did not reveal any significant main effects of the factors time (T1 vs T2) and frequency (drive$<$IGF vs drive$>$IGF), but a significant interaction effect ($F(1,21)=5.09, p=0.003, \eta^2=.003$). These results were further investigated using a Bayesian repeated-measure ANOVA. The obtained Bayes factors ($BF_{10}$) indicate that the variance in the data underlies the variability between participants, while the factor \textit{time} ($BF_{10} = 0.233$) and both \textit{time} and \textit{frequency} ($BF_{10} = 0.274$) do not add any explanatory value. Evidence for the interaction effect \textit{time:frequency} was found to be inconclusive ($BF_{10} = 0.53$), as was the main effect of frequency alone $BF_{10} = 1.146$). These results provide evidence against the expected reduction in gamma power during rhythmic photic stimulation at frequencies different from the IGF; suggesting that the flicker did not capture the oscillatory gamma dynamics.}
+\subsection{\textcolor{red}{Oscillatory gamma dynamics cannot be captured by frequency entrainment}} \noindent \textcolor{red}{Synchronisation of neuronal oscillations by rhythmic stimulation could be conceptualized as the entrainment of a self-sustained oscillator by an external force \citep[e.g.][]{notbohm2016modification,helfrich2019neural}. Frequency entrainment is reflected by a change in frequency of the ongoing oscillations towards the rhythm of the drive. Visual inspection of the TFRs of power in Figure \ref{fig:subj_ent} and \ref{fig:TFRGA_ent} do no indicate any modulation of the peak frequency of the gamma oscillations by the flicker response, suggesting that they do not synchronize. To quantify these observations, we investigated the power of the gamma oscillations before and during the photic drive (Figure \ref{fig:boxpl_ent}) in the \gammaRFT condition.} A central assumption of oscillatory entrainment is the existence of a 'synchronization region' in the frequency range around the endogenous frequency of the oscillator, the so-called Arnold tongue \citep[e.g.][]{pikovsky2003synchronization}. Driving frequencies falling inside this synchronization region, will be able to modulate the dynamics of the self-sustained oscillator \citep[also see][]{hutt2018effect}. \textcolor{red}{With this in mind, the following analyses only included flicker frequencies in the vicinity of the IGF.} For each participant, we considered the relative power change induced by the moving gratings in the 0.5 - 1.5 s interval (T1) before the flicker onset and in the 2.5 - 3.5 s interval (T2) in which both the moving gratings and the photic drive were present. We investigated this for stimulation frequencies below the IGF (averaged power for -6 and -4 Hz) and above (averaged power for +4 and +6 Hz). Assuming a symmetric Arnold tongue centered at the IGF, as shown for entrainment in the alpha-band \citep{notbohm2016modification}, we expected a reduction in power at the IGF in interval T2 compared to interval T1 for both higher and lower driving frequencies, i.e. an effect of time, but not frequency. Figure \ref{fig:boxpl_ent} depicts power change at the IGF for the factors stimulation frequency (drive$<$IGF and drive$>$IGF) and time interval (T1 and T2), averaged over the SOIs for each subject. In accordance with the TFRs in Figure \ref{fig:TFRGA_ent}, there is no meaningful indication for gamma power being reduced during the T2 interval as compared to the T1 interval, affirming the coexistence of the two responses. \textcolor{red}{A factorial repeated-measures ANOVA did not reveal any significant main effects of the factors time (T1 vs T2) and frequency (drive$<$IGF vs drive$>$IGF), but a significant interaction effect ($F(1,21)=5.09, p=0.003, \eta^2=.003$). These results were further investigated using a Bayesian repeated-measure ANOVA. The obtained Bayes factors ($BF_{10}$) indicate that the variance in the data underlies the variability between participants, while the factor \textit{time} ($BF_{10} = 0.233$) and both \textit{time} and \textit{frequency} ($BF_{10} = 0.274$) do not add any explanatory value. Evidence for the interaction effect \textit{time:frequency} was found to be inconclusive ($BF_{10} = 0.53$), as was the main effect of frequency alone $BF_{10} = 1.146$). These results provide evidence against the expected reduction in gamma power during rhythmic photic stimulation at frequencies different from the IGF; suggesting that the flicker did not capture the oscillatory gamma dynamics.}
 
 \begin{figure}[H]
     \centering
@@ -107,7 +107,7 @@ The group averaged, aligned TFRs are shown in Figure \ref{fig:TFRGA_ent} for fre
 \end{figure}
 
 \subsection{Photic drive does not reliably modulate gamma phase} \noindent
-Synchronization of a self-sustained oscillator by an external force, i.e. entrainment, is reflected by a constant phase angle between the two oscillators over extended intervals, so-called \textit{phase plateaus}. These might occur when the frequency of the driver is close to the endogenous frequency of the oscillator, i.e. within its Arnold Tongue \citep{rosenblum2000detection,pikovsky2003synchronization,notbohm2016modification}. When approaching the edge of the synchronization region, episodes of constant phase angles are interrupted by so-called \textit{phase slips} that emerge when the self-sustained oscillator briefly unlocks from the driving force and oscillates at its own frequency. These phase slips will be observed as steps between the phase plateaus. \textcolor{red}{The phase plateau analysis was implemented to complement the PLV analysis shown in Figure \ref{fig:freq_fun}. The PLV quantifies the average synchrony between photodiode and neuromagnetic signal over trials using a 500 ms sliding time window. We hypothesized that in the case of oscillatory entrainment, the gamma oscillator in the \gammaRFT condition would alternate between locking on to the photic drive for a few cycles and slipping back to its endogenous rhythm. Due to the short duration of the gamma cycle ($\sim$17.2 ms for a 58 Hz IGF), this intermittency would be smeared out by the sliding window. As there was no endogenous gamma oscillator in the flicker condition, such an intermittency was not expected.} To investigate phase entrainment of the gamma oscillations by the photic drive, we inspected the phase angle between the photodiode and one, individually selected, occipital gradiometer of interest per participant. The time series of the phase were estimated per trial, separately for the two sensors, using a sliding time-window Fourier transform approach ($\Delta$T = 3 cycles = 3/$f_{flicker}$s; Hanning taper). Phase differences per trial were obtained by subtracting the unwrapped phase angle time series.
+\textcolor{red}{Synchronization of a self-sustained oscillator by an external force, can not only be described by a change in frequency, but also 'phase approximation' or 'phase entrainment' \citep{pikovsky2003synchronization}. This phenomenon} is reflected by a constant phase angle between the two oscillators over extended intervals, so-called \textit{phase plateaus}. These might occur when the frequency of the driver is close to the endogenous frequency of the oscillator, i.e. within its Arnold Tongue \citep{rosenblum2000detection,pikovsky2003synchronization,notbohm2016modification}. When approaching the edge of the synchronization region, episodes of constant phase angles are interrupted by so-called \textit{phase slips} that emerge when the self-sustained oscillator briefly unlocks from the driving force and oscillates at its own frequency. These phase slips will be observed as steps between the phase plateaus. \textcolor{red}{The phase plateau analysis was implemented to complement the PLV analysis shown in Figure \ref{fig:freq_fun}. The PLV quantifies the average synchrony between photodiode and neuromagnetic signal over trials using a 500 ms sliding time window. We hypothesized that in the case of oscillatory entrainment, the gamma oscillator in the \gammaRFT condition would alternate between locking on to the photic drive for a few cycles and slipping back to its endogenous rhythm. Due to the short duration of the gamma cycle ($\sim$17.2 ms for a 58 Hz IGF), this intermittency would be smeared out by the sliding window. As there was no endogenous gamma oscillator in the flicker condition, such an intermittency was not expected.} To investigate phase entrainment of the gamma oscillations by the photic drive, we inspected the phase angle between the photodiode and one, individually selected, occipital gradiometer of interest per participant. The time series of the phase were estimated per trial, separately for the two sensors, using a sliding time-window Fourier transform approach ($\Delta$T = 3 cycles = 3/$f_{flicker}$s; Hanning taper). Phase differences per trial were obtained by subtracting the unwrapped phase angle time series.
 
 \paragraph{Phase angle between photodiode and MEG signal over time} 
 Figure \ref{fig:plat_singlesubj} illustrates the unwrapped phase angles between the MEG and photodiode signal during the photic drive at the IGF (here 58 Hz), in the \RFTonly (A) and \gammaRFT condition (B), respectively, for the same representative participant shown in Figure \ref{fig:IGF_example}A, \ref{fig:RFT_example}A and \ref{fig:subj_ent}. The colored line graphs depict individual trials. In both conditions, the MEG signal drifts apart from the photic drive, towards a maximum difference of 60 radians, i.e. a phase difference of about 9.5 cycles, by the end of the trial (A and B, top panel). Interestingly, the direction of the phase angle appears to change during some of the trials, suggesting spectral instability of the gamma oscillations. Furthermore, the graphs demonstrate a substantial inter-trial variability. This diffusion between trials, quantified for each participant as the standard deviation over trials at the end of the photic stimulation (t=2 in \RFTonly and t=4 in \gammaRFT condition), converted from radiant to ms, is juxtapositioned in Figure \ref{fig:plat_singlesubj}C for the two conditions. It can be readily seen that the phase angles between the stimulation and MEG signal fan out highly similarly in absence and presence of the endogenous gamma oscillations.
