--- a/sections/1_abstract.tex
+++ b/sections/1_abstract.tex
@@ -1,5 +1,5 @@
  \documentclass[../main.tex]{subfiles}
 
 \begin{document}
-\textcolor{red}{Over the past decades, a plethora of studies has linked cortical gamma oscillations ($\sim$30-100 Hz) to neurocomputational mechanisms. Their functional relevance, however, is still passionately debated. Here, we asked if endogenous gamma oscillations in the human brain can be entrained by a rhythmic photic drive $>$50 Hz. A noninvasive modulation of endogenous brain rhythms allows conclusions about their causal involvement in neurocognition.} To this end, we systematically investigated oscillatory responses to a rapid sinusoidal flicker in the absence and presence of endogenous gamma oscillations using magnetoencephalography (MEG) in combination with a high-frequency projector. The photic drive produced a robust response over visual cortex to stimulation frequencies of up to 80 Hz. Strong, endogenous gamma oscillations were induced using moving grating stimuli as repeatedly done in previous research. When superimposing the flicker and the gratings, there was no evidence for phase or frequency entrainment of the endogenous gamma oscillations by the photic drive. Unexpectedly, we did not observe an amplification of the flicker response around participants' individual gamma frequencies; rather, the magnitude of the response decreased monotonically with increasing frequency. Source reconstruction suggests that the flicker response and the gamma oscillations were produced by separate, coexistent generators in visual cortex. The presented findings challenge the notion that cortical gamma oscillations can be entrained by rhythmic visual stimulation. \textcolor{red}{Instead, the mechanism generating endogenous gamma oscillations seems resilient and not easily perturbed..}
+\textcolor{red}{Over the past decades, a plethora of studies has linked cortical gamma oscillations ($\sim$30-100 Hz) to neurocomputational mechanisms. Their functional relevance, however, is still passionately debated. Here, we asked if endogenous gamma oscillations in the human brain can be entrained by a rhythmic photic drive $>$50 Hz. A noninvasive modulation of endogenous brain rhythms allows conclusions about their causal involvement in neurocognition.} To this end, we systematically investigated oscillatory responses to a rapid sinusoidal flicker in the absence and presence of endogenous gamma oscillations using magnetoencephalography (MEG) in combination with a high-frequency projector. The photic drive produced a robust response over visual cortex to stimulation frequencies of up to 80 Hz. Strong, endogenous gamma oscillations were induced using moving grating stimuli as repeatedly done in previous research. When superimposing the flicker and the gratings, there was no evidence for phase or frequency entrainment of the endogenous gamma oscillations by the photic drive. Unexpectedly, we did not observe an amplification of the flicker response around participants' individual gamma frequencies; rather, the magnitude of the response decreased monotonically with increasing frequency. Source reconstruction suggests that the flicker response and the gamma oscillations were produced by separate, coexistent generators in visual cortex. The presented findings challenge the notion that cortical gamma oscillations can be entrained by rhythmic visual stimulation. \textcolor{red}{Instead, the mechanism generating endogenous gamma oscillations seems to be resilient to external perturbation.}
  \end{document}
